# packages/backend/openapi3.yaml
@@ -9,11 +9,114 @@ info:
 tags:
   - name: detail
     description: detail selected tile
+  - name: kit
+    description: existing kits
 security: []
 paths:
-  /detail/{z}/{x}/{y}:
+  /kits:
+    get:
+      operationId: getKits
+      tags:
+        - kit
+      summary: Get a list of available kits
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        5XX:
+          $ref: '#/components/responses/UnexpectedError'
+    post:
+      summary: Register a new kit
+      requestBody:
+        description: kit to be created
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/kit'
+      operationId: createKit
+      tags:
+        - kit
+      responses:
+        '201':
+          description: created
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '409':
+          $ref: '#/components/responses/Conflict'
+        5XX:
+          $ref: '#/components/responses/UnexpectedError'
+  /detail:
     get:
       operationId: getTileDetails
+      tags:
+        - detail
+      summary: return tiles' details by query
+      parameters:
+        - in: query
+          name: kits
+          description: return tile details in specified kits
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/kitName'
+            minItems: 1
+            default: []
+            uniqueItems: true
+        - in: query
+          name: minZoom
+          description: min zoom level
+          schema:
+            $ref: '#/components/schemas/z'
+          required: true
+        - in: query
+          name: maxZoom
+          description: max zoom level
+          schema:
+            $ref: '#/components/schemas/z'
+          required: true
+        - in: query
+          name: bbox
+          description: tiles within bounding box
+          schema:
+            type: array
+            items:
+              anyOf:
+                - $ref: '#/components/schemas/longtitude'
+                - $ref: '#/components/schemas/latitude'
+            minItems: 4
+            maxItems: 4
+          required: true
+        - in: query
+          name: from
+          description: pagination query from
+          schema:
+            $ref: '#/components/schemas/from'
+        - in: query
+          name: size
+          description: pagination query size limitation
+          schema:
+            $ref: '#/components/schemas/size'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/tileDetails'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        5XX:
+          $ref: '#/components/responses/UnexpectedError'
+  /detail/{z}/{x}/{y}:
+    get:
+      operationId: getTileDetailsByKits
       tags:
         - detail
       summary: return tiles' details in selected kits
@@ -42,8 +145,8 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/components/schemas/kit'
-            minItems: 1
+              $ref: '#/components/schemas/kitName'
+            uniqueItems: true
       responses:
         200:
           description: OK
@@ -68,7 +171,7 @@ paths:
           name: kit
           description: kit name
           schema:
-            $ref: '#/components/schemas/kit'
+            $ref: '#/components/schemas/kitName'
           required: true
         - in: path
           name: z
@@ -111,7 +214,7 @@ paths:
           name: kit
           description: kit name
           schema:
-            $ref: '#/components/schemas/kit'
+            $ref: '#/components/schemas/kitName'
           required: true
         - in: path
           name: z
@@ -141,6 +244,8 @@ paths:
           description: Created
         204:
           description: Updated
+        404:
+          $ref: '#/components/responses/NotFound'
         400:
           description: Bad Request
           content:
@@ -161,6 +266,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/error'
+    Conflict:
+      description: Conflict
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/error'
     UnexpectedError:
       description: Unexpected Error
       content:
@@ -175,6 +286,24 @@ components:
       properties:
         message:
           type: string
+    longtitude:
+      type: number
+      minimum: -180
+      maximum: 180
+      exclusiveMinimum: true
+    latitude:
+      type: number
+      minimum: -85.05112877980659
+      maximum: 85.05112877980659
+    from:
+      type: number
+      minimum: 0
+      default: 0
+    size:
+      type: number
+      minimum: 0
+      maximum: 1000
+      default: 100
     z:
       type: integer
       minimum: 0
@@ -184,7 +313,7 @@ components:
     y:
       type: integer
       minimum: 0
-    kit:
+    kitName:
       type: string
       minLength: 1
     state:
@@ -196,7 +325,7 @@ components:
     counter:
       type: integer
       minimum: 0
-    location:
+    coordinates:
       type: string
       pattern: '^(\d+(\.\d+)?),(\d+(\.\d+)?)$'
       example: '34.114,35.123'
@@ -210,6 +339,13 @@ components:
       required:
         - timestamp
       additionalProperties: false
+    kit:
+      type: object
+      properties:
+        name:
+          $ref: '#/components/schemas/kitName'
+      required:
+        - name
     tileDetails:
       type: object
       properties:
@@ -220,7 +356,7 @@ components:
         y:
           $ref: '#/components/schemas/y'
         kit:
-          $ref: '#/components/schemas/kit'
+          $ref: '#/components/schemas/kitName'
         state:
           $ref: '#/components/schemas/state'
         createdAt:
@@ -229,8 +365,8 @@ components:
           $ref: '#/components/schemas/unixTimestamp'
         updateCount:
           $ref: '#/components/schemas/counter'
-        location:
-          $ref: '#/components/schemas/location'
+        coordinates:
+          $ref: '#/components/schemas/coordinates'
       required:
         - z
         - x
@@ -240,4 +376,4 @@ components:
         - createdAt
         - updatedAt
         - updateCount
-        - location
+        - coordinates
