# packages/backend/src/tileDetails/controllers/tileDetailsController.ts
@@ -1,15 +1,17 @@
-import { TileDetails, TileDetailsPayload, TileParams, TileParamsWithKit } from '@map-colonies/detiler-common';
+import { TileDetails, TileDetailsPayload, TileQueryParams } from '@map-colonies/detiler-common';
 import { Logger } from '@map-colonies/js-logger';
+import { BoundingBox, TILEGRID_WEB_MERCATOR, validateTileGridBoundingBox } from '@map-colonies/tile-calc';
 import { RequestHandler } from 'express';
 import httpStatus, { StatusCodes } from 'http-status-codes';
 import { injectable, inject } from 'tsyringe';
 import { SERVICES } from '../../common/constants';
 import { HttpError } from '../../common/errors';
 import { numerifyTileRequestParams, UpsertStatus } from '../../common/util';
-import { TileDetailsNotFoundError } from '../models/errors';
+import { KitNotFoundError, TileDetailsNotFoundError } from '../models/errors';
 import { TileDetailsManager } from '../models/tileDetailsManager';
 
-type GetTilesDetailsHandler = RequestHandler<TileRequestParams, [TileDetails | null], unknown, { kits: string[] }>;
+type GetTilesDetailsHandler = RequestHandler<undefined, TileDetails[], unknown, Required<TileQueryParams>>;
+type GetMultiKitsTilesDetailsHandler = RequestHandler<TileRequestParams, TileDetails[], unknown, { kits?: string[] }>;
 type GetTileDetailsByKitHandler = RequestHandler<TileRequestParams & { kit: string }, TileDetails>;
 type PutTileDetailsByKitHandler = RequestHandler<TileRequestParams & { kit: string }, undefined, TileDetailsPayload>;
 
@@ -28,8 +30,43 @@ export class TileDetailController {
 
   public getTilesDetails: GetTilesDetailsHandler = async (req, res, next) => {
     try {
+      const {
+        bbox: [west, south, east, north],
+        minZoom,
+        maxZoom,
+        from,
+        size,
+        ...queryParams
+      } = req.query;
+      const bbox: BoundingBox = { west: +west, south: +south, east: +east, north: +north };
+      validateTileGridBoundingBox(bbox, TILEGRID_WEB_MERCATOR);
+
+      const tilesDetails = await this.manager.queryTilesDetails({
+        bbox,
+        minZoom: +minZoom,
+        maxZoom: +minZoom,
+        from: +from,
+        size: +size,
+        ...queryParams,
+      });
+      return res.status(httpStatus.OK).json(tilesDetails);
+    } catch (error) {
+      return next(error);
+    }
+  };
+
+  public getMultiKitsTilesDetails: GetMultiKitsTilesDetailsHandler = async (req, res, next) => {
+    try {
+      const { kits } = req.query;
       const params = numerifyTileRequestParams(req.params);
-      const tilesDetails = await this.manager.getTilesDetails(params, req.query.kits);
+      let tilesDetails: TileDetails[];
+
+      if (kits !== undefined && kits.length > 0) {
+        tilesDetails = await this.manager.getTilesDetailsByKits({ ...params, kits });
+      } else {
+        tilesDetails = await this.manager.getTilesDetailsByZXY(params);
+      }
+
       return res.status(httpStatus.OK).json(tilesDetails);
     } catch (error) {
       return next(error);
@@ -55,6 +92,9 @@ export class TileDetailController {
       const status = await this.manager.upsertTilesDetails(params, req.body);
       return res.status(status === UpsertStatus.INSERTED ? httpStatus.CREATED : httpStatus.NO_CONTENT).json();
     } catch (error) {
+      if (error instanceof KitNotFoundError) {
+        (error as HttpError).status = StatusCodes.NOT_FOUND;
+      }
       return next(error);
     }
   };
